# nosso_rocksdb

protobufs/nosso/users/v1/: user.proto
services/: Cargo.toml  build.rs
services/src/: main.rs
services/src/protos/: mod.rs  nosso.users.v1.rs
